# AoC

./: .gitignore  CMakeLists.txt
include/: Day1.h  Day2.h  Day3.h  Day4.h  Day5.h  Day6.h  aoc_output.h  aoc_utils.h  days.h  intcode.h  main.h  utils.h
include/aoc/: Day.h  Printer.h  ansi.h
src/: Day1.cpp  Day1.h  Day2.cpp  Day3.cpp  Day3.h  Day4.cpp  Day5.cpp  Day5.h  Day6.cpp  Day6.h  aoc_output.cpp  aoc_output.h  aoc_utils.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  intcode.cpp  main.cpp
src/aoc/: Day.cpp  Printer.cpp
